--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,6 @@ IF( WIN32 )
   set( RPCRT4 Rpcrt4 )
 
   #boost
-  SET(BOOST_ROOT $ENV{BOOST_ROOT})
 #  set(Boost_USE_DEBUG_PYTHON ON)
   set(Boost_USE_MULTITHREADED ON)
   set(BOOST_ALL_DYN_LINK OFF) # force dynamic linking for all libraries
@@ -136,7 +135,7 @@ ENDIF()
 find_package(OpenSSL 1.0 REQUIRED)
 message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
 
-SET(BOOST_COMPONENTS thread date_time system filesystem program_options signals serialization chrono unit_test_framework context coroutine locale iostreams)
+SET(BOOST_COMPONENTS thread filesystem program_options serialization unit_test_framework coroutine locale iostreams)
 SET(Boost_USE_STATIC_LIBS ON CACHE STRING "ON or OFF")
 
 find_package(Boost 1.65.1 REQUIRED COMPONENTS ${BOOST_COMPONENTS})
