--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,45 +209,24 @@ if(MSVC)
   set_source_files_properties( src/network/http/websocket.cpp PROPERTIES COMPILE_FLAGS "/bigobj" )
 endif(MSVC)
 
-add_executable( api tests/api.cpp )
-target_link_libraries( api fc )
-
-add_executable( blind tests/all_tests.cpp tests/crypto/blind.cpp )
-target_link_libraries( blind fc )
-
-add_executable( ntp_test tests/all_tests.cpp tests/network/ntp_test.cpp )
-target_link_libraries( ntp_test fc )
-
-add_executable( task_cancel_test tests/all_tests.cpp tests/thread/task_cancel.cpp )
-target_link_libraries( task_cancel_test fc )
-
-add_executable( bloom_test tests/all_tests.cpp tests/bloom_test.cpp )
-target_link_libraries( bloom_test fc )
-
-add_executable( hmac_test tests/hmac_test.cpp )
-target_link_libraries( hmac_test fc )
-
-add_executable( blinding_test tests/blinding_test.cpp )
-target_link_libraries( blinding_test fc )
+add_executable( api_test tests/api.cpp )
+target_link_libraries( api_test fc )
 
 add_executable( ecc_test tests/crypto/ecc_test.cpp )
 target_link_libraries( ecc_test fc )
 
-#add_executable( test_aes tests/aes_test.cpp )
-#target_link_libraries( test_aes fc )
-#add_executable( test_sleep tests/sleep.cpp )
-#target_link_libraries( test_sleep fc )
-#add_executable( test_rate_limiting tests/rate_limiting.cpp )
-#target_link_libraries( test_rate_limiting fc )
+add_executable( rate_limiting_test tests/rate_limiting.cpp )
+target_link_libraries( rate_limiting_test fc )
 
 add_executable( all_tests tests/all_tests.cpp
+                          tests/blinding_test.cpp
+                          tests/hmac_test.cpp
                           tests/compress/compress.cpp
                           tests/crypto/aes_test.cpp
                           tests/crypto/base_n_tests.cpp
                           tests/crypto/bigint_test.cpp
                           tests/crypto/blind.cpp
                           tests/crypto/blowfish_test.cpp
-                          tests/crypto/dh_test.cpp
                           tests/crypto/rand_test.cpp
                           tests/crypto/sha_tests.cpp
                           tests/network/ntp_test.cpp
@@ -256,4 +235,4 @@ add_executable( all_tests tests/all_tests.cpp
                           tests/bloom_test.cpp
                           tests/utf8_test.cpp
                           )
-target_link_libraries( all_tests fc )
+target_link_libraries( all_tests fc Boost::unit_test_framework )
